Se creó con Colab

--- a/TF.ipynb
+++ b/TF.ipynb
@@ -108,8 +108,7 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.svm import SVC\n",
         "from scipy.special import jv\n",
-        "from google.colab import drive\n",
-        "import os\n",
+        "\n",
         "from matplotlib import pyplot as plt\n",
         "from sklearn import datasets\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
@@ -119,12 +118,16 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score, confusion_matrix\n",
         "from sklearn.tree import plot_tree\n",
-        "from sklearn.svm import SVC"
+        "from sklearn.svm import SVC\n",
+        "\n",
+        "#para montar en drive\n",
+        "from google.colab import drive\n",
+        "import os\n"
       ],
       "metadata": {
         "id": "rImY73yldZf_"
       },
-      "execution_count": 19,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -5318,7 +5321,11 @@
       "source": [
         "***Análisis de los gráficos***\n",
         "\n",
-        "En resumen, estos tres bloques de código generan boxplots para visualizar la distribución de tres características diferentes ('fixed acidity', 'volatile acidity' y 'citric acid') según los diferentes niveles de calidad del vino. Los boxplots muestran la mediana, los cuartiles y los valores atípicos, lo que permite comparar la distribución de cada característica en diferentes niveles de calidad del vino de manera efectiva. Los títulos de los gráficos proporcionan información sobre qué característica se está visualizando y su influencia en la calidad del vino.\n",
+        "Se expone que los tres bloques de código generan boxplots para visualizar la distribución de tres características diferentes ('fixed acidity', 'volatile acidity' y 'citric acid') según los diferentes niveles de calidad del vino. Los boxplots muestran la mediana, los cuartiles y los valores atípicos, lo que permite comparar la distribución de cada característica en diferentes niveles de calidad del vino de manera efectiva.\n",
+        "\n",
+        "Se puede observar a partir de esta graficación, que la acidez fija es la de mayor impacto frente a la calidad del vino, a partir de las medidas estadísticas que describen el comportamiento de los tres tipos de ácidos en la producción del vino.\n",
+        "\n",
+        "En un menor plano, se observa la influencia del ácido cítrico en su relación con la calidad del producto vitivinícola final.\n",
         "\n",
         "\n",
         "\n"
@@ -5383,7 +5390,7 @@
       "source": [
         "***Análisis del gráfico***\n",
         "\n",
-        "En resumen, este código genera un scatterplot que muestra la relación entre el pH y la calidad del vino. Cada punto en el scatterplot representa una observación en el conjunto de datos, donde la posición del punto en los ejes x e y corresponde al valor de pH y calidad del vino, respectivamente. Este tipo de gráfico es útil para visualizar la relación entre dos variables continuas y para identificar posibles patrones o tendencias en los datos."
+        "Esta visualización generada desde un scatterplot, muestra la relación entre el pH y la calidad del vino. Cada punto en el scatterplot representa una observación en el conjunto de datos, donde la posición del punto en los ejes x e y corresponde al valor de pH y calidad del vino, respectivamente. Este tipo de gráfico es útil para visualizar la relación entre dos variables continuas y para identificar posibles patrones o tendencias en los datos. Por esto mismo, puede observarse la relación directa entre el ph, que determina el nivel de alcalinidad y acidez del vino. La mayoría de los vinos presentan un valor de pH entre 3.0 y 4.0, lo que se correlaciona con una baja calidad del vino en general."
       ],
       "metadata": {
         "id": "_xw7MtN6v89U"
@@ -5445,7 +5452,7 @@
       "source": [
         "***Análisis del gráfico***\n",
         "\n",
-        "En resumen, este código genera un mapa de calor que visualiza la matriz de correlación entre las características seleccionadas ('fixed acidity', 'volatile acidity', 'citric acid') y la calidad del vino. Cada celda del mapa de calor muestra el valor de correlación entre dos características, donde los colores más oscuros indican una correlación más negativa, los colores más claros indican una correlación más positiva y el blanco representa una correlación neutra. La inclusión de los valores de correlación en las celdas permite una fácil interpretación de la fuerza y la dirección de la relación entre las características.\n",
+        "Este gráfico expone un mapa de calor que visualiza la matriz de correlación entre las características seleccionadas ('fixed acidity', 'volatile acidity', 'citric acid') y la calidad del vino. Cada celda del mapa de calor muestra el valor de correlación entre dos características, donde los colores más oscuros indican una correlación más negativa, los colores más claros indican una correlación más positiva y el blanco representa una correlación neutra. La inclusión de los valores de correlación en las celdas permite una fácil interpretación de la fuerza y la dirección de la relación entre las características. Desde este lugar puede observarse que el impacto positivo sobre la calidad del vino, lo presenta el ácido cítrico en sus concentraciones. Y en una afectación negativa bajo parámetros de calidad, se encuentra el ácido volátil.\n",
         "\n",
         "\n",
         "\n",
@@ -5544,7 +5551,7 @@
       "source": [
         "***Análisis de los gráficos***\n",
         "\n",
-        "En resumen, estos tres bloques de código generan scatterplots que muestran la relación entre la acidez fija, volátil y cítrica y el contenido de alcohol en el vino. Cada punto en los scatterplots representa una observación en el conjunto de datos, donde la posición del punto en los ejes x e y corresponde al valor de la acidez y el contenido de alcohol, respectivamente. Estos gráficos pueden ayudar a identificar posibles asociaciones entre estas características en el vino."
+        "Estos tres bloques de código generan scatterplots que muestran la relación entre la acidez fija, volátil y cítrica y el contenido de alcohol en el vino. Cada punto en los scatterplots representa una observación en el conjunto de datos, donde la posición del punto en los ejes x e y corresponde al valor de la acidez y el contenido de alcohol, respectivamente. Estos gráficos evidencian la plausible identificación de posibles asociaciones entre las características de acidez fija, acidez volátil y ácido cítrico en el vino. Lo que se evidencia es que los niveles de acidez no afectan significativamente en la concentración etílica en el vino."
       ],
       "metadata": {
         "id": "68TEauqbvyWA"
@@ -5553,37 +5560,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***Análisis del gráfico***"
-      ],
-      "metadata": {
-        "id": "WUYl3z6hvqzP"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 189,
-      "metadata": {
-        "id": "ShWvFgqGzkiV"
-      },
-      "outputs": [],
-      "source": [
-        "#pip install mlxtend -- upgrade -- no deps\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "#para montar en drive\n",
-        "from google.colab import drive\n",
-        "import os\n",
-        "#drive.mount('/content/gdrive')\n",
-        "# Establecer ruta de acceso en drive\n",
-        "import os\n",
-        "#print(os.getcwd())\n",
-        "#os.chdir(\"/content/gdrive/My Drive\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# ANÁLISIS DE LOS GRÁFICOS"
+        "# ANÁLISIS"
       ],
       "metadata": {
         "id": "QJW_BdlYtht7"
@@ -5592,27 +5569,30 @@
     {
       "cell_type": "markdown",
       "source": [
-        "La acidez es un factor crucial en la calidad del vino y afecta diversos aspectos de su sabor, aroma, estructura y capacidad de envejecimiento. Aquí tienes respuestas a tus preguntas:\n",
+        "La acidez es un factor crucial en la calidad del vino y afecta diversos aspectos de su sabor, aroma, estructura y capacidad de envejecimiento. Por esto mismo es que se plantea la necesidad de analizar los niveles de acidificación en el vino en búsqueda de una mejor calidad del producto final.\n",
         "\n",
-        "Influencia de la acidez en la calidad del vino:\n",
+        "*Influencia de la acidez en la calidad del vino:*\n",
         "\n",
-        "La acidez contribuye a la frescura y viveza del vino, equilibrando su sabor y proporcionando una sensación de \"chispa\" en el paladar. Una acidez adecuada puede realzar los sabores frutales y mejorar la percepción del vino.\n",
-        "Además, la acidez actúa como conservante natural, ayudando a mantener la estabilidad microbiológica y protegiendo el vino contra la oxidación prematura.\n",
-        "Relación entre el pH del vino y su calidad:\n",
+        "La acidez contribuye a la frescura y viveza del vino, equilibrando su sabor y proporcionando una sensación de \"chispa\" en el paladar. Una acidez adecuada puede realzar los sabores frutales y mejorar la percepción del vino. Por esto mismo, se puede aseverar que la acidez fija es el componente de mayor impacto que interviene en el vino, afectando a la calidad, desde su sabor, aroma y textura entre otras características.\n",
+        "Por otro lado, la acidez actúa como conservante natural, ayudando a mantener la estabilidad microbiológica y protegiendo el vino contra la oxidación prematura. Por esto mismo, también es importante mantener los niveles adecuados de acidez del vino.\n",
+        "\n",
+        "*Relación entre el pH del vino y su calidad*\n",
         "\n",
         "Si bien el pH del vino está relacionado con su acidez, no es el único factor que determina su calidad. Un pH más bajo (más ácido) generalmente se asocia con vinos frescos y vivaces, pero otros aspectos como el equilibrio de sabores, la intensidad aromática, la estructura tánica y la complejidad también son cruciales para la calidad del vino.\n",
-        "Por lo tanto, aunque un pH más bajo puede ser indicativo de una buena acidez y frescura, no garantiza por sí solo la calidad del vino.\n",
-        "Tipo de acidez que afecta más la calidad del vino:\n",
+        "Por lo tanto, aunque un pH más bajo puede ser indicativo de una buena acidez y frescura, no garantiza por sí solo la calidad del vino. Esto es observado en los gráficos de visualización, donde el ácido cítrico es el que presenta menores niveles y se relaciona con una mejor calidad del mismo. Pero esto no es determinante como se expuso.\n",
         "\n",
-        "En general, las tres principales ácidos presentes en el vino son el ácido tartárico, el ácido málico y el ácido cítrico. Cada uno contribuye de manera diferente a la percepción de la acidez en el vino.\n",
+        "*Tipo de acidez que afecta más la calidad del vino*\n",
+        "\n",
+        "En general, desde los antecedentes frente a la acidez del vino y su calidad, las tres principales ácidos presentes en el vino son el ácido tartárico, el ácido málico y el ácido cítrico. Cada uno contribuye de manera diferente a la percepción de la acidez en el vino.\n",
         "El ácido tartárico es el ácido principal en la uva y suele ser deseable en el vino, ya que contribuye a la estructura y al equilibrio.\n",
         "El ácido málico, presente en las uvas verdes, puede aportar frescura pero en exceso puede dar una sensación de acidez áspera.\n",
         "El ácido cítrico, aunque presente en menor medida, puede agregar complejidad y frescura al vino.\n",
         "El equilibrio entre estos ácidos es esencial para la calidad general del vino.\n",
-        "La acidez del vino determina la graduación alcohólica:\n",
         "\n",
-        "No, la acidez del vino no determina directamente su graduación alcohólica. La graduación alcohólica del vino está influenciada principalmente por el contenido de azúcar en las uvas y el proceso de fermentación. La acidez puede influir en el equilibrio y la percepción del alcohol en el vino, pero no determina su nivel de alcohol.\n",
-        "En resumen, la acidez es un componente crucial en la calidad del vino, pero su influencia y relación con otros aspectos son complejas y multifacéticas. El equilibrio entre los diferentes ácidos y otros componentes es fundamental para obtener un vino de alta calidad."
+        "*La acidez del vino determina la graduación alcohólica*\n",
+        "\n",
+        "En cuanto a esta premisa, se puede observar que la acidez del vino no determina directamente su graduación alcohólica, pero si con otros factores como vimos expuestos en los gráficos. La graduación alcohólica del vino está influenciada principalmente por el contenido de azúcar en las uvas y el proceso de fermentación. La acidez puede influir en el equilibrio y la percepción del alcohol en el vino, pero no determina su nivel de alcohol.\n",
+        "Para concluir, la acidez es un componente crucial en la calidad del vino, pero su influencia y relación con otros aspectos son complejas y multifacéticas. El equilibrio entre los diferentes ácidos y otros componentes es fundamental para obtener un vino de alta calidad."
       ],
       "metadata": {
         "id": "hZgYnjRAt2B1"
@@ -5963,7 +5943,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhR7rWptHqGgTaRJB+X4jU",
+      "authorship_tag": "ABX9TyPAY/d9Tih/KFz/Oai9Tvql",
       "include_colab_link": true
     },
     "kernelspec": {
