Se creó con Colab

--- a/TF.ipynb
+++ b/TF.ipynb
@@ -5610,7 +5610,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Para realizar un árbol de decisión para predecir la calidad del vino en función de sus características, se utilizará una biblioteca de aprendizaje automático scikit-learn."
+        "Para esta etapa de análisis y validación, se utilizará un árbol de decisión para predecir la calidad del vino en función de sus características, se utilizará una biblioteca de aprendizaje automático scikit-learn."
       ],
       "metadata": {
         "id": "AO0nP8rP0uZV"
@@ -5619,7 +5619,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Este código utiliza la biblioteca scikit-learn para cargar los datos desde el archivo CSV, dividir los datos en conjuntos de entrenamiento y prueba, crear un clasificador de árbol de decisión, entrenar el modelo, predecir en el conjunto de prueba, calcular la precisión del modelo y mostrar la matriz de confusión. Finalmente, visualiza el árbol de decisión generado."
+        "Se utilizará la biblioteca scikit-learn para cargar los datos desde el archivo CSV, dividir los datos en conjuntos de entrenamiento y prueba, crear un clasificador de árbol de decisión, entrenar el modelo, predecir en el conjunto de prueba, calcular la precisión del modelo y mostrar la matriz de confusión. Finalmente, visualiza el árbol de decisión generado."
       ],
       "metadata": {
         "id": "G4ZHALBWIyQM"
@@ -5628,11 +5628,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Para construir y evaluar el modelo de análisis, los datos se dividirán en conjuntos de entrenamiento y prueba (tanto X como Y). La proporción elegida es del 70% para entrenamiento y el 30% para prueba. Esta división asegura que el modelo tenga suficiente información para aprender y también permite evaluar su desempeño en datos no vistos.\n",
-        "\n",
-        "Además, para mantener la proporción original de las respuestas de satisfacción en ambos conjuntos (entrenamiento y prueba), utilizaremos la técnica de estratificación (stratify). La estratificación garantiza que la distribución de la variable objetivo (en este caso, la satisfacción) sea similar en ambos conjuntos, evitando sesgos que podrían afectar la validez de los resultados.\n",
-        "\n",
-        "También se empleará el parámetro random_state. Esto establece una semilla para el generador de números aleatorios, lo que asegura que la división de los datos sea reproducible. Es decir, al usar el mismo random_state, obtendremos la misma división cada vez que ejecutemos el proceso, permitiendo replicar los resultados."
+        "Para construir y evaluar el modelo de análisis, los datos se dividirán en conjuntos de entrenamiento y prueba (tanto X como Y). La proporción elegida es del 60% para entrenamiento y el 30% para prueba. Esta división asegura que el modelo tenga suficiente información para aprender y también permite evaluar su desempeño en datos no vistos.\n",
+        "\n"
       ],
       "metadata": {
         "id": "q5p-H4mQNBFi"
@@ -5751,6 +5748,24 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "***SVM***"
+      ],
+      "metadata": {
+        "id": "01VcM_xVqXjy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El propósito del modelo SVM en este contexto es clasificar los componentes del vino, específicamente el ácido fijo, ácido volátil y ácido citrico, en relación con la calidad del vino. El modelo encuentra el hiperplano que mejor separa estas dos clases, maximizando la distancia (margen) entre los puntos de datos más cercanos de cada dimensión de análisis. El SVM es especialmente efectivo cuando el número de dimensiones es mayor que el número de muestras. Versatilidad: Utiliza diferentes funciones de kernel (lineal, polinómico, RBF, etc.) para crear fronteras de decisión no lineales. Robustez: Es menos propenso a sobreajustarse cuando se utiliza correctamente, gracias al margen máximo que crea entre las clases. Eficiencia Computacional: Puede ser ineficiente en términos de tiempo y memoria cuando se trabaja con grandes conjuntos de datos. Ajuste de Hiperparámetros: Requiere un ajuste cuidadoso de los hiperparámetros, como el parámetro de penalización C y los parámetros del kernel."
+      ],
+      "metadata": {
+        "id": "y1-z30vzqfx9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -5801,15 +5816,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "En resumen, este código carga un conjunto de datos de vinos, divide los datos en conjuntos de entrenamiento y prueba, escala las características, entrena un modelo SVM y evalúa su precisión en los datos de prueba."
-      ],
-      "metadata": {
-        "id": "C81s85QLXHY9"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "print('accuracy =', round(acc * 100, 2), '%')"
@@ -5831,6 +5837,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Este modelo carga un conjunto de datos de vinos, divide los datos en conjuntos de entrenamiento y prueba, escala las características, entrena un modelo SVM y evalúa su precisión en los datos de prueba.\n",
+        "\n",
+        "Este modelo SVM entrenado proporciona una importante herramienta para la validación del modelo. La precisión obtenida, con un accuracy del 65.5%, deja en evidencia la acercada validación del modelo implementado para generalizar en datos de prueba. El grado de precisión del modelo indica que el SVM ha logrado acercarse en la identificación acertada en la relación de la calidad del vino y los niveles de acidez proporcinados en datos. Esto es taxativo a la hora de planificar la producción vitivinícola de calidad de importación."
+      ],
+      "metadata": {
+        "id": "135aWF3uuHxZ"
+      }
     },
     {
       "cell_type": "code",
@@ -5915,7 +5932,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Este código primero carga el conjunto de datos desde la URL proporcionada, luego divide los datos en conjuntos de entrenamiento y prueba, escala las características para asegurarse de que estén en la misma escala, inicializa y entrena un modelo de regresión logística, y finalmente calcula la precisión del modelo en los datos de prueba."
+        "Este código primero carga el conjunto de datos desde la URL proporcionada, luego divide los datos en conjuntos de entrenamiento y prueba, escala las características para asegurarse de que estén en la misma escala, inicializa y entrena un modelo de regresión logística, y finalmente calcula la precisión del modelo en los datos de prueba.\n",
+        "\n",
+        "El modelo KNN ha sido entrenado para clasificar la relación entre la acidificación y la calidad del vino. La precisión obtenida en los datos de prueba es del 55.90%. Esto indica que el modelo es deficiente en clasificar correctamente la relación directa de la acidez y la calidad."
       ],
       "metadata": {
         "id": "UsPsxMRgWyiL"
@@ -5933,7 +5952,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Se puede concluir, a prtir del objetivo general de este trabajo, de conocer de qué manera influye los niveles de acidificación en la producción del vino para la obtención de un vino de mayor calidad."
+        "Se puede concluir, a prtir del objetivo general de este trabajo, de conocer de qué manera influye los niveles de acidificación en la producción del vino para la obtención de un vino de mayor calidad.\n",
+        "\n",
+        "El alto grado de precisión del modelo KNN sugiere que este enfoque es efectivo para este tipo de problema de clasificación. El KNN es especialmente útil en situaciones donde las relaciones entre las características y las clases no son lineales y se basan en la proximidad de las observaciones en el espacio de características."
       ],
       "metadata": {
         "id": "0xNjpKsx9rTY"
@@ -5943,7 +5964,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAY/d9Tih/KFz/Oai9Tvql",
+      "authorship_tag": "ABX9TyM8LR09vkMKpJjIWiQosg8C",
       "include_colab_link": true
     },
     "kernelspec": {
