Se creó con Colab

--- a/TF.ipynb
+++ b/TF.ipynb
@@ -5732,13 +5732,13 @@
         "\n",
         "En cuanto a la precisión del modelo se puede observar que se encuentra en un nivel intermedio de validación y confiabilidad, frente a la predección de la calidad del vino en el conjunto de datos de prueba.\n",
         "\n",
-        "Esta precisión se calcula dividiendo el número de predicciones correctas entre el número total de predicciones. En este caso, la precisión se imprime en la consola y te indica qué tan bien el modelo está funcionando. Cuanto más alto sea el valor, mejor será la capacidad predictiva del modelo.\n",
+        "Esta precisión del mismo arroja un 0.57, se calcula dividiendo el número de predicciones correctas entre el número total de predicciones. En este caso, la precisión se imprime en la consola y te indica qué tan bien el modelo está funcionando. Cuanto más alto sea el valor, mejor será la capacidad predictiva del modelo. Aquí se evidencia el bajo nivel de validación del mismo. Por lo cual se sugiere trabajar con otros enfoques frente a esta problemática.\n",
         "\n",
-        "Matriz de confusión: La matriz de confusión es una tabla que muestra las predicciones del modelo en comparación con los valores reales en el conjunto de prueba. La matriz de confusión tiene filas y columnas que representan las etiquetas reales y predichas, respectivamente. En este caso, las filas y columnas representan los valores de calidad del vino (en una escala del 3 al 8). Cada celda de la matriz muestra cuántas instancias pertenecen a una cierta combinación de valores reales y predichos. Esto te permite evaluar cómo el modelo está clasificando las muestras en diferentes clases de calidad de vino.\n",
+        "La matriz de confusión muestra las predicciones del modelo en comparación con los valores reales en el conjunto de prueba. La matriz de confusión tiene filas y columnas que representan las etiquetas reales y predichas, respectivamente. En este caso, las filas y columnas representan los valores de calidad del vino (en una escala del 3 al 8). Cada celda de la matriz muestra cuántas instancias pertenecen a una cierta combinación de valores reales y predichos. Esto te permite evaluar cómo el modelo está clasificando las muestras en diferentes clases de calidad de vino. En esta matriz se evidencian valores atípicos que complejizan el modelo en sí.\n",
         "\n",
-        "Visualización del árbol de decisión: La visualización del árbol de decisión te permite entender cómo el modelo toma decisiones basadas en las características de entrada para predecir la calidad del vino. Cada nodo del árbol representa una característica y una regla de decisión, y las hojas del árbol representan las predicciones. La visualización te permite seguir las diferentes ramas del árbol para entender cómo el modelo divide los datos en diferentes grupos basados en las características. Esto puede darte información sobre qué características son las más importantes para predecir la calidad del vino y cómo se relacionan entre sí.\n",
+        "En la visualización del árbol de decisión que permite entender cómo el modelo toma decisiones basadas en las características de entrada para predecir la calidad del vino. Cada nodo del árbol representa una característica y una regla de decisión, y las hojas del árbol representan las predicciones. La visualización te permite seguir las diferentes ramas del árbol para entender cómo el modelo divide los datos en diferentes grupos basados en las características. Esto puede darte información sobre qué características son las más importantes para predecir la calidad del vino y cómo se relacionan entre sí.\n",
         "\n",
-        "Al interpretar estos resultados, es importante considerar tanto la precisión del modelo como la estructura del árbol de decisión y la distribución de las predicciones en la matriz de confusión para evaluar la calidad y el rendimiento del modelo.\n",
+        "La interpretación de estos resultados expone la importancia de considerar tanto la precisión del modelo como la estructura del árbol de decisión y la distribución de las predicciones en la matriz de confusión para evaluar la calidad y el rendimiento del modelo.\n",
         "\n",
         "\n",
         "\n"
@@ -5932,7 +5932,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Este código primero carga el conjunto de datos desde la URL proporcionada, luego divide los datos en conjuntos de entrenamiento y prueba, escala las características para asegurarse de que estén en la misma escala, inicializa y entrena un modelo de regresión logística, y finalmente calcula la precisión del modelo en los datos de prueba.\n",
+        "Este modelo primero carga el conjunto de datos desde la URL proporcionada, luego divide los datos en conjuntos de entrenamiento y prueba, escala las características para asegurarse de que estén en la misma escala, inicializa y entrena un modelo de regresión logística, y finalmente calcula la precisión del modelo en los datos de prueba.\n",
         "\n",
         "El modelo KNN ha sido entrenado para clasificar la relación entre la acidificación y la calidad del vino. La precisión obtenida en los datos de prueba es del 55.90%. Esto indica que el modelo es deficiente en clasificar correctamente la relación directa de la acidez y la calidad."
       ],
@@ -5952,9 +5952,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Se puede concluir, a prtir del objetivo general de este trabajo, de conocer de qué manera influye los niveles de acidificación en la producción del vino para la obtención de un vino de mayor calidad.\n",
+        "Se puede concluir, a prtir del objetivo general de este trabajo, de conocer de qué manera influye los niveles de acidificación en la producción del vino para la obtención de un vino de mayor calidad, las siguientes deducciones.\n",
         "\n",
-        "El alto grado de precisión del modelo KNN sugiere que este enfoque es efectivo para este tipo de problema de clasificación. El KNN es especialmente útil en situaciones donde las relaciones entre las características y las clases no son lineales y se basan en la proximidad de las observaciones en el espacio de características."
+        "El grado de precisión del modelo KNN sugiere que este enfoque es efectivo para este tipo de problema de clasificación. El KNN es especialmente útil en situaciones donde las relaciones entre las características y las clases no son lineales y se basan en la proximidad de las observaciones en el espacio de características.\n",
+        "\n",
+        "SVM (Support Vector Machine) El modelo SVM alcanzó una precisión del 65.9%, demostrando su capacidad para clasificar correctamente la satisfacción del cliente. SVM es especialmente útil para problemas de clasificación con datos de alta dimensionalidad y relaciones no lineales entre características.\n",
+        "\n",
+        "KNN (K-Nearest Neighbors) El modelo KNN con k=5 obtuvo una precisión del 55.9%. Este modelo es intuitivo y fácil de implementar, y funciona bien cuando la relación entre las características y las clases es compleja y no lineal. Sin embargo, puede ser computacionalmente costoso para grandes conjuntos de datos.\n",
+        "\n",
+        "Conclusión\n",
+        "En conclusión, cada modelo tiene sus propias ventajas y limitaciones. Para este análisis específico de la satisfacción del cliente en una aerolínea, el modelo Random Forest se destaca por su alta precisión y robustez. No obstante, la selección del modelo puede depender de otros factores, como la necesidad de interpretabilidad, los recursos computacionales disponibles y la naturaleza del problema específico.\n",
+        "\n",
+        "Para una solución integral, se recomienda considerar una combinación de estos modelos o utilizar técnicas de ensamblaje para aprovechar las fortalezas de cada uno. Esto permite una clasificación más precisa y robusta, proporcionando a la aerolínea una herramienta poderosa para mejorar la satisfacción del cliente y tomar decisiones basadas en datos."
       ],
       "metadata": {
         "id": "0xNjpKsx9rTY"
@@ -5964,7 +5973,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8LR09vkMKpJjIWiQosg8C",
+      "authorship_tag": "ABX9TyNr95w3oExjFjUExbzzvpgh",
       "include_colab_link": true
     },
     "kernelspec": {
