--- a/Pre entrega.ipynb
+++ b/Pre entrega.ipynb
@@ -4114,6 +4114,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Análisis de variables principales"
+      ],
+      "metadata": {
+        "id": "u6wL3HatBAAq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "En esta parte, comenzamos con el análisis de las variables de nuesttro objeto de estudio frente a la calidad del vino."
       ],
       "metadata": {
@@ -6260,7 +6269,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtuhwwo4Gkoln1JeCiiPeY",
+      "authorship_tag": "ABX9TyMyf3qmQ+gmPeYK2ShLqE/t",
       "include_colab_link": true
     },
     "kernelspec": {
