--- a/Pre entrega.ipynb
+++ b/Pre entrega.ipynb
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "_H0phqfDGIEp"
       },
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -105,9 +105,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-LH9sHiVGXi2",
-        "outputId": "b025fdcd-200f-4268-d448-1d97456ff332"
+        "outputId": "2a434b2e-e47a-4db5-c108-44b98c18d102"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -117,7 +117,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -169,7 +169,7 @@
       "metadata": {
         "id": "rImY73yldZf_"
       },
-      "execution_count": 21,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -4114,6 +4114,60 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Se consulta sobre la existencia de valores duplicados para su posterior tratamiento."
+      ],
+      "metadata": {
+        "id": "bSS57kzeocVe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Detección de duplicados\n",
+        "duplicados = df.duplicated()\n",
+        "print(duplicados)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mQAO42oVn6P6",
+        "outputId": "3e926c89-626f-4f9a-8e61-11c55c40bb75"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0       False\n",
+            "1       False\n",
+            "2       False\n",
+            "3       False\n",
+            "4       False\n",
+            "        ...  \n",
+            "1139    False\n",
+            "1140    False\n",
+            "1141    False\n",
+            "1142    False\n",
+            "1143    False\n",
+            "Length: 1144, dtype: bool\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "No se observan datos duplicados."
+      ],
+      "metadata": {
+        "id": "ec7MY3EIol6H"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Análisis de variables principales"
       ],
       "metadata": {
@@ -6269,7 +6323,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMyf3qmQ+gmPeYK2ShLqE/t",
+      "authorship_tag": "ABX9TyPUrkUEU5OUz1J3efaEVqbC",
       "include_colab_link": true
     },
     "kernelspec": {
