--- a/EntregaFINAL1.ipynb
+++ b/EntregaFINAL1.ipynb
@@ -7034,6 +7034,25 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Test de Chi Cuadrado"
+      ],
+      "metadata": {
+        "id": "JMBez_3U00i5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Si bien el test de Chi Cuadrado en utilizado para encontrar relaciones entre variables cualitativas por medio de una tabla de contingencia, se decide ser utilizado a modo de prueba en el aprendizaje práctico.\n",
+        "H0: No hay relación entre variables."
+      ],
+      "metadata": {
+        "id": "Adu4u_2h1NjE"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -7851,7 +7870,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoHSKAqIjVrH1Lw3AY+KSH",
+      "authorship_tag": "ABX9TyPlES2tYaEvnr8v2Mll31Pa",
       "include_colab_link": true
     },
     "kernelspec": {
