--- a/EntregaFinal1.ipynb
+++ b/EntregaFinal1.ipynb
@@ -426,10 +426,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 441
+          "height": 424
         },
         "id": "Gr7-xgLbA9Lk",
-        "outputId": "e175e408-674e-4d82-88ef-a57a8c55d612"
+        "outputId": "9b02734b-ca7b-4c78-b7a2-625347939baa"
       },
       "execution_count": 2,
       "outputs": [
@@ -480,7 +480,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d8d0457e-a506-4f57-aa36-025ff98de008\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f5dc4d9a-e7af-4196-bf24-e0ecd835c73b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -698,7 +698,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d8d0457e-a506-4f57-aa36-025ff98de008')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f5dc4d9a-e7af-4196-bf24-e0ecd835c73b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -750,12 +750,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d8d0457e-a506-4f57-aa36-025ff98de008 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f5dc4d9a-e7af-4196-bf24-e0ecd835c73b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d8d0457e-a506-4f57-aa36-025ff98de008');\n",
+              "        const element = document.querySelector('#df-f5dc4d9a-e7af-4196-bf24-e0ecd835c73b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -775,8 +775,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ba7038fe-8da4-4e9a-9fed-5e77a9ffb3e2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ba7038fe-8da4-4e9a-9fed-5e77a9ffb3e2')\"\n",
+              "<div id=\"df-47ecc55b-1fee-4904-829f-369550a90946\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-47ecc55b-1fee-4904-829f-369550a90946')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -895,14 +895,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ba7038fe-8da4-4e9a-9fed-5e77a9ffb3e2 button');\n",
+              "        document.querySelector('#df-47ecc55b-1fee-4904-829f-369550a90946 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_4257330d-1799-44c7-854d-b4ef79de5271\">\n",
+              "  <div id=\"id_29617c4b-5097-4175-b3f8-e30c06a75900\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -946,7 +946,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_4257330d-1799-44c7-854d-b4ef79de5271 button.colab-df-generate');\n",
+              "        document.querySelector('#id_29617c4b-5097-4175-b3f8-e30c06a75900 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -7046,7 +7046,7 @@
       "cell_type": "markdown",
       "source": [
         "Si bien el test de Chi Cuadrado es utilizado para encontrar relaciones entre variables cualitativas por medio de una tabla de contingencia, se decide ser utilizado a modo de prueba en el aprendizaje práctico.\n",
-        "H0: No hay relación entre variables."
+        "H0: Hay relación entre variables."
       ],
       "metadata": {
         "id": "Adu4u_2h1NjE"
@@ -7055,7 +7055,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Cruce de variables \"ALCOHOL\" y \"PH\", a partir de la pregunta de investigación, planteada al inicio de este trabajo."
+        "CHI CUADRADO: Cruce de variables \"ALCOHOL\" y \"PH\", a partir de la pregunta de investigación, planteada al inicio de este trabajo."
       ],
       "metadata": {
         "id": "tvfNculLkKz-"
@@ -7076,16 +7076,26 @@
         "print(f\"P-value: {p}\")\n",
         "print(f\"Degrees of freedom: {dof}\")\n",
         "print(\"Expected frequencies:\")\n",
-        "print(expected)\n"
+        "print(expected)\n",
+        "\n",
+        "# Realizar la prueba\n",
+        "p_valor = chi2_contingency(contingency_table)[1]\n",
+        "\n",
+        "#Imprimir resultados\n",
+        "if p_valor < 0.05:\n",
+        "    print(\"Rechazamos la hipótesis nula. Hay relación entre variables.\")\n",
+        "else:\n",
+        "    print(\"No rechazamos la hipótesis nula. No hay relación entre variables.\")\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XCrgUnJTbKkJ",
-        "outputId": "de9a251e-6ee1-4e48-9850-031bf32abd12"
+        "outputId": "175f9cf6-59a7-4353-861a-1c68680a3875"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -7131,7 +7141,8 @@
             " ...\n",
             " [0.03234266 0.03234266 0.06468531 ... 0.06468531 0.06468531 0.03234266]\n",
             " [0.00087413 0.00087413 0.00174825 ... 0.00174825 0.00174825 0.00087413]\n",
-            " [0.00087413 0.00087413 0.00174825 ... 0.00174825 0.00174825 0.00087413]]\n"
+            " [0.00087413 0.00087413 0.00174825 ... 0.00174825 0.00174825 0.00087413]]\n",
+            "Rechazamos la hipótesis nula. Hay relación entre variables.\n"
           ]
         }
       ]
@@ -7139,7 +7150,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Cruce de variables \"Calidad\" y \"PH\", a partir de la pregunta de investigación, planteada al inicio de este trabajo."
+        "CHI CUADRADO: Cruce de variables \"Calidad\" y \"PH\", a partir de la pregunta de investigación, planteada al inicio de este trabajo."
       ],
       "metadata": {
         "id": "tTtwS9VYiCSW"
@@ -7169,7 +7180,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7362,7 +7373,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Cruce de variables \"Densidad\" y \"Acido cítrico\", a partir de lo observado en la matriz de correlación del vino. Donde se oberva la fuerte relación entre el ácido cítrico, la densidad en linea al ácido fijo con miras de calidad del vino."
+        "CHI CUADRADO: Cruce de variables \"Densidad\" y \"Acido cítrico\", a partir de lo observado en la matriz de correlación del vino. Donde se oberva la fuerte relación entre el ácido cítrico, la densidad en linea al ácido fijo con miras de calidad del vino."
       ],
       "metadata": {
         "id": "XiqEEqL4jKfB"
@@ -7392,7 +7403,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8052,7 +8063,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOUaBhWu2DfCyoNmXK+TQ3",
+      "authorship_tag": "ABX9TyPKQAZ69UI/P9FJmW6WSuH+",
       "include_colab_link": true
     },
     "kernelspec": {
