--- a/EntregaFinal1.ipynb
+++ b/EntregaFinal1.ipynb
@@ -7171,16 +7171,25 @@
         "print(f\"P-value: {p}\")\n",
         "print(f\"Degrees of freedom: {dof}\")\n",
         "print(\"Expected frequencies:\")\n",
-        "print(expected)"
+        "print(expected)\n",
+        "\n",
+        "# Realizar la prueba\n",
+        "p_valor = chi2_contingency(contingency_table)[1]\n",
+        "\n",
+        "#Imprimir resultados\n",
+        "if p_valor < 0.05:\n",
+        "    print(\"Rechazamos la hipótesis nula. Hay relación entre variables.\")\n",
+        "else:\n",
+        "    print(\"No rechazamos la hipótesis nula. No hay relación entre variables.\")\n"
       ],
       "metadata": {
         "id": "txH6mu6LiE2n",
-        "outputId": "a91f6be5-1051-4322-a3e8-ef7a7c70c111",
+        "outputId": "3eb17f47-c537-4374-f94b-9aeb3f6325e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -7365,7 +7374,8 @@
             "  6.11888112e-03 2.62237762e-03 8.74125874e-04 1.74825175e-03\n",
             "  2.62237762e-03 3.49650350e-03 2.62237762e-03 8.74125874e-04\n",
             "  8.74125874e-04 1.74825175e-03 8.74125874e-04 8.74125874e-04\n",
-            "  1.74825175e-03 1.74825175e-03 1.74825175e-03 8.74125874e-04]]\n"
+            "  1.74825175e-03 1.74825175e-03 1.74825175e-03 8.74125874e-04]]\n",
+            "Rechazamos la hipótesis nula. Hay relación entre variables.\n"
           ]
         }
       ]
@@ -7394,16 +7404,25 @@
         "print(f\"P-value: {p}\")\n",
         "print(f\"Degrees of freedom: {dof}\")\n",
         "print(\"Expected frequencies:\")\n",
-        "print(expected)"
+        "print(expected)\n",
+        "\n",
+        "# Realizar la prueba\n",
+        "p_valor = chi2_contingency(contingency_table)[1]\n",
+        "\n",
+        "#Imprimir resultados\n",
+        "if p_valor < 0.05:\n",
+        "    print(\"Rechazamos la hipótesis nula. Hay relación entre variables.\")\n",
+        "else:\n",
+        "    print(\"No rechazamos la hipótesis nula. No hay relación entre variables.\")\n"
       ],
       "metadata": {
         "id": "obmMASVBiacI",
-        "outputId": "38bc755c-e07c-426f-d443-3611e10e3058",
+        "outputId": "c07e8a54-aeb4-41a6-8846-2f08059bff97",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -7463,7 +7482,8 @@
             " ...\n",
             " [0.08653846 0.02272727 0.03059441 ... 0.00087413 0.00087413 0.00087413]\n",
             " [0.08653846 0.02272727 0.03059441 ... 0.00087413 0.00087413 0.00087413]\n",
-            " [0.08653846 0.02272727 0.03059441 ... 0.00087413 0.00087413 0.00087413]]\n"
+            " [0.08653846 0.02272727 0.03059441 ... 0.00087413 0.00087413 0.00087413]]\n",
+            "Rechazamos la hipótesis nula. Hay relación entre variables.\n"
           ]
         }
       ]
@@ -8063,7 +8083,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKQAZ69UI/P9FJmW6WSuH+",
+      "authorship_tag": "ABX9TyME1soYkrTQie34wf9KcDxo",
       "include_colab_link": true
     },
     "kernelspec": {
