--- a/EntregaFinal1.ipynb
+++ b/EntregaFinal1.ipynb
@@ -7729,6 +7729,25 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Modelo de Aprendizaje Supervisado"
+      ],
+      "metadata": {
+        "id": "WIYWfr9S-L8f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se realiza este tipo de ensamble en Machine Learning, donde se combinarán diversos árboles de decisión.\n",
+        "Se buscará mejorar el rendimiento del modelo por medio de métodos combinados."
+      ],
+      "metadata": {
+        "id": "3GP1wBN3-jDE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Para esta etapa de análisis y validación, se utilizará un árbol de decisión para predecir la calidad del vino en función de sus características, se utilizará una biblioteca de aprendizaje automático scikit-learn."
       ],
       "metadata": {
@@ -8092,7 +8111,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQB4IS2/35zw73spEgg+mT",
+      "authorship_tag": "ABX9TyOS6HeQn6ePqfwxlZgX63jH",
       "include_colab_link": true
     },
     "kernelspec": {
